2005-03-07  Rodney Dawes  <dobey@novell.com>

	* configure.in, NEWS: Update for 2.10.0 release

2005-02-28  Rodney Dawes  <dobey@novell.com>

	* configure.in, NEWS: Update for 2.9.92 release

2005-02-23  Jakub Steiner <jimmac@ximian.com>

	* scalable/emblems/emblem-mail.svg: Mail Emblem by 
	  Andreas Nilsson <nisses.mail@home.se>
	
2005-02-08  Jakub Steiner <jimmac@ximian.com>

	* scalable/filesystems/gnome-fs-directory-accept.svg
	* scalable/filesystems/gnome-fs-directory-visiting.svg: properly
	  sized and reflecting the 48x48px rendering. 
	
	* {72x72,96x96}/filesystems/gnome-fs-directory*:
	* {72x72,96x96}/filesystems/gnome-fs-home*: replaced by the scalable
		version

2005-02-08  Jakub Steiner <jimmac@ximian.com>

	* {16x16,24x24,32x32,48x48}/filesystems/gnome-fs-client.png: 
	  make wallpaper blue consistently across all icons (bug #165860)

2005-02-08  Jakub Steiner <jimmac@ximian.com>

	* 16x16/filesystems/gnome-fs-ftp.png:
	* 16x16/filesystems/gnome-fs-nfs.png:
	* 16x16/filesystems/gnome-fs-smb.png:
	* 16x16/filesystems/gnome-fs-ssh.png: 16x16 versions for
	  the file dialog. Fixes bug #166192

2005-02-08  Jakub Steiner <jimmac@ximian.com>

	* 16x16/devices/gnome-dev-harddisk-1394.png:
	* 16x16/devices/gnome-dev-removable-1394.png:
	* 16x16/devices/gnome-dev-harddisk-usb.png:
	* 16x16/devices/gnome-dev-removable-usb.png: 16x16 versions for
	  the file dialog. Fixes bug #166193

2005-02-08  Jakub Steiner <jimmac@ximian.com>

	* 16x16/apps/text-editor.png:
	* 24x24/apps/text-editor.png:
	* 32x32/apps/text-editor.png:
	* 16x16/apps/text-editor.png: generic Text editor icon

2005-02-07  Rodney Dawes  <dobey@novell.com>

	* configure.in, NEWS: Update for 2.9.91 release

2005-02-04  Jakub Steiner <jimmac@ximian.com>

	* scalable/apps/gnome-fs-trash*svg: vector trash (full state unfinished)

2005-02-03  Jakub Steiner <jimmac@ximian.com>

	* {16x16,24x24,32x32,48x48}/apps/gnome-window-manager.png:
	  added all sizes provided by Luca Ferretti (bug #144880)
